--- a/end_to_end/fraud_detection/2-lineage-train-assess-bias-tune-registry-e2e.ipynb
+++ b/end_to_end/fraud_detection/2-lineage-train-assess-bias-tune-registry-e2e.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,9 +91,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using AWS Region: us-east-1\n"
+     ]
+    }
+   ],
    "source": [
     "# You can change this to a region of your choice\n",
     "import sagemaker\n",
@@ -104,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,11 +247,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-10-03 03:35:14 Starting - Starting the training job...ProfilerReport-1664768113: InProgress\n",
+      "...\n",
+      "2022-10-03 03:36:04 Starting - Preparing the instances for training......\n",
+      "2022-10-03 03:37:04 Downloading - Downloading input data...\n",
+      "2022-10-03 03:37:44 Training - Downloading the training image......\n",
+      "2022-10-03 03:38:45 Training - Training image download completed. Training in progress..\u001b[34mINFO:sagemaker-containers:Imported framework sagemaker_xgboost_container.training\u001b[0m\n",
+      "\u001b[34mINFO:sagemaker-containers:No GPUs detected (normal if no gpus installed)\u001b[0m\n",
+      "\u001b[34mINFO:sagemaker_xgboost_container.training:Invoking user training script.\u001b[0m\n",
+      "\u001b[34mINFO:sagemaker-containers:Module xgboost_starter_script does not provide a setup.py. \u001b[0m\n",
+      "\u001b[34mGenerating setup.py\u001b[0m\n",
+      "\u001b[34mINFO:sagemaker-containers:Generating setup.cfg\u001b[0m\n",
+      "\u001b[34mINFO:sagemaker-containers:Generating MANIFEST.in\u001b[0m\n",
+      "\u001b[34mINFO:sagemaker-containers:Installing module with the following command:\u001b[0m\n",
+      "\u001b[34m/miniconda3/bin/python3 -m pip install . \u001b[0m\n",
+      "\u001b[34mProcessing /opt/ml/code\u001b[0m\n",
+      "\u001b[34mBuilding wheels for collected packages: xgboost-starter-script\n",
+      "  Building wheel for xgboost-starter-script (setup.py): started\n",
+      "  Building wheel for xgboost-starter-script (setup.py): finished with status 'done'\n",
+      "  Created wheel for xgboost-starter-script: filename=xgboost_starter_script-1.0.0-py2.py3-none-any.whl size=5009 sha256=f388e67304beeb6ae192c31751cab2089aefca5d7b9af867a461ed2cc3901247\n",
+      "  Stored in directory: /home/model-server/tmp/pip-ephem-wheel-cache-xxyeytrs/wheels/95/c1/85/65aaf48b35aba88c6e896d2fd04a4b69f1cee0d81ea32993ca\u001b[0m\n",
+      "\u001b[34mSuccessfully built xgboost-starter-script\u001b[0m\n",
+      "\u001b[34mInstalling collected packages: xgboost-starter-script\u001b[0m\n",
+      "\u001b[34mSuccessfully installed xgboost-starter-script-1.0.0\u001b[0m\n",
+      "\u001b[34mINFO:sagemaker-containers:No GPUs detected (normal if no gpus installed)\u001b[0m\n",
+      "\u001b[34mINFO:sagemaker-containers:Invoking user script\u001b[0m\n",
+      "\u001b[34mTraining Env:\u001b[0m\n",
+      "\u001b[34m{\n",
+      "    \"additional_framework_parameters\": {},\n",
+      "    \"channel_input_dirs\": {\n",
+      "        \"train\": \"/opt/ml/input/data/train\"\n",
+      "    },\n",
+      "    \"current_host\": \"algo-1\",\n",
+      "    \"framework_module\": \"sagemaker_xgboost_container.training:main\",\n",
+      "    \"hosts\": [\n",
+      "        \"algo-1\"\n",
+      "    ],\n",
+      "    \"hyperparameters\": {\n",
+      "        \"eta\": \"0.2\",\n",
+      "        \"max_depth\": \"3\",\n",
+      "        \"num_round\": \"100\",\n",
+      "        \"objective\": \"binary:logistic\"\n",
+      "    },\n",
+      "    \"input_config_dir\": \"/opt/ml/input/config\",\n",
+      "    \"input_data_config\": {\n",
+      "        \"train\": {\n",
+      "            \"TrainingInputMode\": \"File\",\n",
+      "            \"S3DistributionType\": \"FullyReplicated\",\n",
+      "            \"RecordWrapperType\": \"None\"\n",
+      "        }\n",
+      "    },\n",
+      "    \"input_dir\": \"/opt/ml/input\",\n",
+      "    \"is_master\": true,\n",
+      "    \"job_name\": \"sagemaker-xgboost-2022-10-03-03-35-13-876\",\n",
+      "    \"log_level\": 20,\n",
+      "    \"master_hostname\": \"algo-1\",\n",
+      "    \"model_dir\": \"/opt/ml/model\",\n",
+      "    \"module_dir\": \"s3://sagemaker-us-east-1-326383828736/fraud-detect-demo/training_jobs/sagemaker-xgboost-2022-10-03-03-35-13-876/source/sourcedir.tar.gz\",\n",
+      "    \"module_name\": \"xgboost_starter_script\",\n",
+      "    \"network_interface_name\": \"eth0\",\n",
+      "    \"num_cpus\": 4,\n",
+      "    \"num_gpus\": 0,\n",
+      "    \"output_data_dir\": \"/opt/ml/output/data\",\n",
+      "    \"output_dir\": \"/opt/ml/output\",\n",
+      "    \"output_intermediate_dir\": \"/opt/ml/output/intermediate\",\n",
+      "    \"resource_config\": {\n",
+      "        \"current_host\": \"algo-1\",\n",
+      "        \"current_instance_type\": \"ml.m4.xlarge\",\n",
+      "        \"current_group_name\": \"homogeneousCluster\",\n",
+      "        \"hosts\": [\n",
+      "            \"algo-1\"\n",
+      "        ],\n",
+      "        \"instance_groups\": [\n",
+      "            {\n",
+      "                \"instance_group_name\": \"homogeneousCluster\",\n",
+      "                \"instance_type\": \"ml.m4.xlarge\",\n",
+      "                \"hosts\": [\n",
+      "                    \"algo-1\"\n",
+      "                ]\n",
+      "            }\n",
+      "        ],\n",
+      "        \"network_interface_name\": \"eth0\"\n",
+      "    },\n",
+      "    \"user_entry_point\": \"xgboost_starter_script.py\"\u001b[0m\n",
+      "\u001b[34m}\u001b[0m\n",
+      "\u001b[34mEnvironment variables:\u001b[0m\n",
+      "\u001b[34mSM_HOSTS=[\"algo-1\"]\u001b[0m\n",
+      "\u001b[34mSM_NETWORK_INTERFACE_NAME=eth0\u001b[0m\n",
+      "\u001b[34mSM_HPS={\"eta\":\"0.2\",\"max_depth\":\"3\",\"num_round\":\"100\",\"objective\":\"binary:logistic\"}\u001b[0m\n",
+      "\u001b[34mSM_USER_ENTRY_POINT=xgboost_starter_script.py\u001b[0m\n",
+      "\u001b[34mSM_FRAMEWORK_PARAMS={}\u001b[0m\n",
+      "\u001b[34mSM_RESOURCE_CONFIG={\"current_group_name\":\"homogeneousCluster\",\"current_host\":\"algo-1\",\"current_instance_type\":\"ml.m4.xlarge\",\"hosts\":[\"algo-1\"],\"instance_groups\":[{\"hosts\":[\"algo-1\"],\"instance_group_name\":\"homogeneousCluster\",\"instance_type\":\"ml.m4.xlarge\"}],\"network_interface_name\":\"eth0\"}\u001b[0m\n",
+      "\u001b[34mSM_INPUT_DATA_CONFIG={\"train\":{\"RecordWrapperType\":\"None\",\"S3DistributionType\":\"FullyReplicated\",\"TrainingInputMode\":\"File\"}}\u001b[0m\n",
+      "\u001b[34mSM_OUTPUT_DATA_DIR=/opt/ml/output/data\u001b[0m\n",
+      "\u001b[34mSM_CHANNELS=[\"train\"]\u001b[0m\n",
+      "\u001b[34mSM_CURRENT_HOST=algo-1\u001b[0m\n",
+      "\u001b[34mSM_MODULE_NAME=xgboost_starter_script\u001b[0m\n",
+      "\u001b[34mSM_LOG_LEVEL=20\u001b[0m\n",
+      "\u001b[34mSM_FRAMEWORK_MODULE=sagemaker_xgboost_container.training:main\u001b[0m\n",
+      "\u001b[34mSM_INPUT_DIR=/opt/ml/input\u001b[0m\n",
+      "\u001b[34mSM_INPUT_CONFIG_DIR=/opt/ml/input/config\u001b[0m\n",
+      "\u001b[34mSM_OUTPUT_DIR=/opt/ml/output\u001b[0m\n",
+      "\u001b[34mSM_NUM_CPUS=4\u001b[0m\n",
+      "\u001b[34mSM_NUM_GPUS=0\u001b[0m\n",
+      "\u001b[34mSM_MODEL_DIR=/opt/ml/model\u001b[0m\n",
+      "\u001b[34mSM_MODULE_DIR=s3://sagemaker-us-east-1-326383828736/fraud-detect-demo/training_jobs/sagemaker-xgboost-2022-10-03-03-35-13-876/source/sourcedir.tar.gz\u001b[0m\n",
+      "\u001b[34mSM_TRAINING_ENV={\"additional_framework_parameters\":{},\"channel_input_dirs\":{\"train\":\"/opt/ml/input/data/train\"},\"current_host\":\"algo-1\",\"framework_module\":\"sagemaker_xgboost_container.training:main\",\"hosts\":[\"algo-1\"],\"hyperparameters\":{\"eta\":\"0.2\",\"max_depth\":\"3\",\"num_round\":\"100\",\"objective\":\"binary:logistic\"},\"input_config_dir\":\"/opt/ml/input/config\",\"input_data_config\":{\"train\":{\"RecordWrapperType\":\"None\",\"S3DistributionType\":\"FullyReplicated\",\"TrainingInputMode\":\"File\"}},\"input_dir\":\"/opt/ml/input\",\"is_master\":true,\"job_name\":\"sagemaker-xgboost-2022-10-03-03-35-13-876\",\"log_level\":20,\"master_hostname\":\"algo-1\",\"model_dir\":\"/opt/ml/model\",\"module_dir\":\"s3://sagemaker-us-east-1-326383828736/fraud-detect-demo/training_jobs/sagemaker-xgboost-2022-10-03-03-35-13-876/source/sourcedir.tar.gz\",\"module_name\":\"xgboost_starter_script\",\"network_interface_name\":\"eth0\",\"num_cpus\":4,\"num_gpus\":0,\"output_data_dir\":\"/opt/ml/output/data\",\"output_dir\":\"/opt/ml/output\",\"output_intermediate_dir\":\"/opt/ml/output/intermediate\",\"resource_config\":{\"current_group_name\":\"homogeneousCluster\",\"current_host\":\"algo-1\",\"current_instance_type\":\"ml.m4.xlarge\",\"hosts\":[\"algo-1\"],\"instance_groups\":[{\"hosts\":[\"algo-1\"],\"instance_group_name\":\"homogeneousCluster\",\"instance_type\":\"ml.m4.xlarge\"}],\"network_interface_name\":\"eth0\"},\"user_entry_point\":\"xgboost_starter_script.py\"}\u001b[0m\n",
+      "\u001b[34mSM_USER_ARGS=[\"--eta\",\"0.2\",\"--max_depth\",\"3\",\"--num_round\",\"100\",\"--objective\",\"binary:logistic\"]\u001b[0m\n",
+      "\u001b[34mSM_OUTPUT_INTERMEDIATE_DIR=/opt/ml/output/intermediate\u001b[0m\n",
+      "\u001b[34mSM_CHANNEL_TRAIN=/opt/ml/input/data/train\u001b[0m\n",
+      "\u001b[34mSM_HP_ETA=0.2\u001b[0m\n",
+      "\u001b[34mSM_HP_MAX_DEPTH=3\u001b[0m\n",
+      "\u001b[34mSM_HP_NUM_ROUND=100\u001b[0m\n",
+      "\u001b[34mSM_HP_OBJECTIVE=binary:logistic\u001b[0m\n",
+      "\u001b[34mPYTHONPATH=/miniconda3/bin:/:/miniconda3/lib/python3.6/site-packages/xgboost/dmlc-core/tracker:/miniconda3/lib/python36.zip:/miniconda3/lib/python3.6:/miniconda3/lib/python3.6/lib-dynload:/miniconda3/lib/python3.6/site-packages\u001b[0m\n",
+      "\u001b[34mInvoking script with the following command:\u001b[0m\n",
+      "\u001b[34m/miniconda3/bin/python3 -m xgboost_starter_script --eta 0.2 --max_depth 3 --num_round 100 --objective binary:logistic\u001b[0m\n",
+      "\u001b[34m[0]#011train-auc:0.9421788\u001b[0m\n",
+      "\u001b[34m[1]#011validation-auc:0.7932148\u001b[0m\n",
+      "\n",
+      "2022-10-03 03:39:10 Uploading - Uploading generated training model\n",
+      "2022-10-03 03:39:10 Completed - Training job completed\n",
+      "Training seconds: 127\n",
+      "Billable seconds: 127\n"
+     ]
+    }
+   ],
    "source": [
     "if \"training_job_1_name\" not in locals():\n",
     "\n",
@@ -286,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,9 +442,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Create artifact arn:aws:sagemaker:us-east-1:326383828736:artifact/1b61c7ebe4222b31c7f93aa9853fceb0: SUCCESSFUL\n"
+     ]
+    }
+   ],
    "source": [
     "# return any existing artifact which match the our training job's code arn\n",
     "# ====>\n",
@@ -343,9 +489,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using existing artifact: arn:aws:sagemaker:us-east-1:326383828736:artifact/d2bdff332f6e31085b91c813c0a085fe\n"
+     ]
+    }
+   ],
    "source": [
     "training_data_s3_uri = training_job_1_info[\"InputDataConfig\"][0][\"DataSource\"][\"S3DataSource\"][\n",
     "    \"S3Uri\"\n",
@@ -379,9 +533,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using existing artifact: arn:aws:sagemaker:us-east-1:326383828736:artifact/8d2adf1704ff1615dc5b07a391f0c205\n"
+     ]
+    }
+   ],
    "source": [
     "trained_model_s3_uri = training_job_1_info[\"ModelArtifacts\"][\"S3ModelArtifacts\"]\n",
     "\n",
@@ -413,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,9 +594,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Association with Code: SUCCEESFUL\n",
+      "Association already exists with DataSet\n"
+     ]
+    }
+   ],
    "source": [
     "input_artifacts = [code_artifact, training_data_artifact]\n",
     "\n",
@@ -460,9 +631,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Association with Model: SUCCESSFUL\n"
+     ]
+    }
+   ],
    "source": [
     "output_artifacts = [model_artifact]\n",
     "\n",
@@ -500,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,9 +787,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading pre-generated analysis file...\n",
+      "{\n",
+      "    \"name\": \"CI\",\n",
+      "    \"description\": \"Class Imbalance (CI)\",\n",
+      "    \"value\": 0.398\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "if \"clarify_bias_job_1_name\" in locals():\n",
     "    s3_client.download_file(\n",
@@ -649,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,9 +869,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Package Group name: fraud-detect-demo\n"
+     ]
+    }
+   ],
    "source": [
     "if \"mpg_name\" not in locals():\n",
     "    mpg_name = prefix\n",
@@ -688,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,9 +900,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using existing Model Package Group: fraud-detect-demo\n"
+     ]
+    }
+   ],
    "source": [
     "matching_mpg = sagemaker_boto_client.list_model_package_groups(NameContains=mpg_name)['ModelPackageGroupSummaryList']\n",
     "\n",
@@ -730,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,9 +1037,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "model package status: Completed\n"
+     ]
+    }
+   ],
    "source": [
     "mp_info = sagemaker_boto_client.describe_model_package(\n",
     "    ModelPackageName=mp1_response[\"ModelPackageArn\"]\n",
@@ -857,9 +1073,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'ModelPackageGroupName': 'fraud-detect-demo',\n",
+       "  'ModelPackageVersion': 2,\n",
+       "  'ModelPackageArn': 'arn:aws:sagemaker:us-east-1:326383828736:model-package/fraud-detect-demo/2',\n",
+       "  'ModelPackageDescription': 'XGBoost classifier to detect insurance fraud.',\n",
+       "  'CreationTime': datetime.datetime(2022, 10, 3, 3, 39, 33, 910000, tzinfo=tzlocal()),\n",
+       "  'ModelPackageStatus': 'Completed',\n",
+       "  'ModelApprovalStatus': 'PendingManualApproval'},\n",
+       " {'ModelPackageGroupName': 'fraud-detect-demo',\n",
+       "  'ModelPackageVersion': 1,\n",
+       "  'ModelPackageArn': 'arn:aws:sagemaker:us-east-1:326383828736:model-package/fraud-detect-demo/1',\n",
+       "  'ModelPackageDescription': 'XGBoost classifier to detect insurance fraud with SMOTE.',\n",
+       "  'CreationTime': datetime.datetime(2022, 10, 2, 5, 47, 7, 276000, tzinfo=tzlocal()),\n",
+       "  'ModelPackageStatus': 'Completed',\n",
+       "  'ModelApprovalStatus': 'Approved'}]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sagemaker_boto_client.list_model_packages(ModelPackageGroupName=mpg_name)[\"ModelPackageSummaryList\"]"
    ]
