--- a/end_to_end/fraud_detection/2-lineage-train-assess-bias-tune-registry-e2e.ipynb
+++ b/end_to_end/fraud_detection/2-lineage-train-assess-bias-tune-registry-e2e.ipynb
@@ -256,12 +256,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-10-03 03:35:14 Starting - Starting the training job...ProfilerReport-1664768113: InProgress\n",
+      "2022-10-03 06:32:51 Starting - Starting the training job...ProfilerReport-1664778771: InProgress\n",
       "...\n",
-      "2022-10-03 03:36:04 Starting - Preparing the instances for training......\n",
-      "2022-10-03 03:37:04 Downloading - Downloading input data...\n",
-      "2022-10-03 03:37:44 Training - Downloading the training image......\n",
-      "2022-10-03 03:38:45 Training - Training image download completed. Training in progress..\u001b[34mINFO:sagemaker-containers:Imported framework sagemaker_xgboost_container.training\u001b[0m\n",
+      "2022-10-03 06:33:34 Starting - Preparing the instances for training.........\n",
+      "2022-10-03 06:35:15 Downloading - Downloading input data...\n",
+      "2022-10-03 06:35:43 Training - Downloading the training image......\n",
+      "2022-10-03 06:36:43 Training - Training image download completed. Training in progress..\u001b[34mINFO:sagemaker-containers:Imported framework sagemaker_xgboost_container.training\u001b[0m\n",
       "\u001b[34mINFO:sagemaker-containers:No GPUs detected (normal if no gpus installed)\u001b[0m\n",
       "\u001b[34mINFO:sagemaker_xgboost_container.training:Invoking user training script.\u001b[0m\n",
       "\u001b[34mINFO:sagemaker-containers:Module xgboost_starter_script does not provide a setup.py. \u001b[0m\n",
@@ -272,10 +272,10 @@
       "\u001b[34m/miniconda3/bin/python3 -m pip install . \u001b[0m\n",
       "\u001b[34mProcessing /opt/ml/code\u001b[0m\n",
       "\u001b[34mBuilding wheels for collected packages: xgboost-starter-script\n",
-      "  Building wheel for xgboost-starter-script (setup.py): started\n",
-      "  Building wheel for xgboost-starter-script (setup.py): finished with status 'done'\n",
-      "  Created wheel for xgboost-starter-script: filename=xgboost_starter_script-1.0.0-py2.py3-none-any.whl size=5009 sha256=f388e67304beeb6ae192c31751cab2089aefca5d7b9af867a461ed2cc3901247\n",
-      "  Stored in directory: /home/model-server/tmp/pip-ephem-wheel-cache-xxyeytrs/wheels/95/c1/85/65aaf48b35aba88c6e896d2fd04a4b69f1cee0d81ea32993ca\u001b[0m\n",
+      "  Building wheel for xgboost-starter-script (setup.py): started\u001b[0m\n",
+      "\u001b[34m  Building wheel for xgboost-starter-script (setup.py): finished with status 'done'\n",
+      "  Created wheel for xgboost-starter-script: filename=xgboost_starter_script-1.0.0-py2.py3-none-any.whl size=5009 sha256=76b4b80d76b3e33a1c3fa328822abe9a9dfba3529897e3ce50b2824e0e6f272c\n",
+      "  Stored in directory: /home/model-server/tmp/pip-ephem-wheel-cache-q_nw9b46/wheels/95/c1/85/65aaf48b35aba88c6e896d2fd04a4b69f1cee0d81ea32993ca\u001b[0m\n",
       "\u001b[34mSuccessfully built xgboost-starter-script\u001b[0m\n",
       "\u001b[34mInstalling collected packages: xgboost-starter-script\u001b[0m\n",
       "\u001b[34mSuccessfully installed xgboost-starter-script-1.0.0\u001b[0m\n",
@@ -308,11 +308,11 @@
       "    },\n",
       "    \"input_dir\": \"/opt/ml/input\",\n",
       "    \"is_master\": true,\n",
-      "    \"job_name\": \"sagemaker-xgboost-2022-10-03-03-35-13-876\",\n",
+      "    \"job_name\": \"sagemaker-xgboost-2022-10-03-06-32-51-044\",\n",
       "    \"log_level\": 20,\n",
       "    \"master_hostname\": \"algo-1\",\n",
       "    \"model_dir\": \"/opt/ml/model\",\n",
-      "    \"module_dir\": \"s3://sagemaker-us-east-1-326383828736/fraud-detect-demo/training_jobs/sagemaker-xgboost-2022-10-03-03-35-13-876/source/sourcedir.tar.gz\",\n",
+      "    \"module_dir\": \"s3://sagemaker-us-east-1-326383828736/fraud-detect-demo/training_jobs/sagemaker-xgboost-2022-10-03-06-32-51-044/source/sourcedir.tar.gz\",\n",
       "    \"module_name\": \"xgboost_starter_script\",\n",
       "    \"network_interface_name\": \"eth0\",\n",
       "    \"num_cpus\": 4,\n",
@@ -360,8 +360,8 @@
       "\u001b[34mSM_NUM_CPUS=4\u001b[0m\n",
       "\u001b[34mSM_NUM_GPUS=0\u001b[0m\n",
       "\u001b[34mSM_MODEL_DIR=/opt/ml/model\u001b[0m\n",
-      "\u001b[34mSM_MODULE_DIR=s3://sagemaker-us-east-1-326383828736/fraud-detect-demo/training_jobs/sagemaker-xgboost-2022-10-03-03-35-13-876/source/sourcedir.tar.gz\u001b[0m\n",
-      "\u001b[34mSM_TRAINING_ENV={\"additional_framework_parameters\":{},\"channel_input_dirs\":{\"train\":\"/opt/ml/input/data/train\"},\"current_host\":\"algo-1\",\"framework_module\":\"sagemaker_xgboost_container.training:main\",\"hosts\":[\"algo-1\"],\"hyperparameters\":{\"eta\":\"0.2\",\"max_depth\":\"3\",\"num_round\":\"100\",\"objective\":\"binary:logistic\"},\"input_config_dir\":\"/opt/ml/input/config\",\"input_data_config\":{\"train\":{\"RecordWrapperType\":\"None\",\"S3DistributionType\":\"FullyReplicated\",\"TrainingInputMode\":\"File\"}},\"input_dir\":\"/opt/ml/input\",\"is_master\":true,\"job_name\":\"sagemaker-xgboost-2022-10-03-03-35-13-876\",\"log_level\":20,\"master_hostname\":\"algo-1\",\"model_dir\":\"/opt/ml/model\",\"module_dir\":\"s3://sagemaker-us-east-1-326383828736/fraud-detect-demo/training_jobs/sagemaker-xgboost-2022-10-03-03-35-13-876/source/sourcedir.tar.gz\",\"module_name\":\"xgboost_starter_script\",\"network_interface_name\":\"eth0\",\"num_cpus\":4,\"num_gpus\":0,\"output_data_dir\":\"/opt/ml/output/data\",\"output_dir\":\"/opt/ml/output\",\"output_intermediate_dir\":\"/opt/ml/output/intermediate\",\"resource_config\":{\"current_group_name\":\"homogeneousCluster\",\"current_host\":\"algo-1\",\"current_instance_type\":\"ml.m4.xlarge\",\"hosts\":[\"algo-1\"],\"instance_groups\":[{\"hosts\":[\"algo-1\"],\"instance_group_name\":\"homogeneousCluster\",\"instance_type\":\"ml.m4.xlarge\"}],\"network_interface_name\":\"eth0\"},\"user_entry_point\":\"xgboost_starter_script.py\"}\u001b[0m\n",
+      "\u001b[34mSM_MODULE_DIR=s3://sagemaker-us-east-1-326383828736/fraud-detect-demo/training_jobs/sagemaker-xgboost-2022-10-03-06-32-51-044/source/sourcedir.tar.gz\u001b[0m\n",
+      "\u001b[34mSM_TRAINING_ENV={\"additional_framework_parameters\":{},\"channel_input_dirs\":{\"train\":\"/opt/ml/input/data/train\"},\"current_host\":\"algo-1\",\"framework_module\":\"sagemaker_xgboost_container.training:main\",\"hosts\":[\"algo-1\"],\"hyperparameters\":{\"eta\":\"0.2\",\"max_depth\":\"3\",\"num_round\":\"100\",\"objective\":\"binary:logistic\"},\"input_config_dir\":\"/opt/ml/input/config\",\"input_data_config\":{\"train\":{\"RecordWrapperType\":\"None\",\"S3DistributionType\":\"FullyReplicated\",\"TrainingInputMode\":\"File\"}},\"input_dir\":\"/opt/ml/input\",\"is_master\":true,\"job_name\":\"sagemaker-xgboost-2022-10-03-06-32-51-044\",\"log_level\":20,\"master_hostname\":\"algo-1\",\"model_dir\":\"/opt/ml/model\",\"module_dir\":\"s3://sagemaker-us-east-1-326383828736/fraud-detect-demo/training_jobs/sagemaker-xgboost-2022-10-03-06-32-51-044/source/sourcedir.tar.gz\",\"module_name\":\"xgboost_starter_script\",\"network_interface_name\":\"eth0\",\"num_cpus\":4,\"num_gpus\":0,\"output_data_dir\":\"/opt/ml/output/data\",\"output_dir\":\"/opt/ml/output\",\"output_intermediate_dir\":\"/opt/ml/output/intermediate\",\"resource_config\":{\"current_group_name\":\"homogeneousCluster\",\"current_host\":\"algo-1\",\"current_instance_type\":\"ml.m4.xlarge\",\"hosts\":[\"algo-1\"],\"instance_groups\":[{\"hosts\":[\"algo-1\"],\"instance_group_name\":\"homogeneousCluster\",\"instance_type\":\"ml.m4.xlarge\"}],\"network_interface_name\":\"eth0\"},\"user_entry_point\":\"xgboost_starter_script.py\"}\u001b[0m\n",
       "\u001b[34mSM_USER_ARGS=[\"--eta\",\"0.2\",\"--max_depth\",\"3\",\"--num_round\",\"100\",\"--objective\",\"binary:logistic\"]\u001b[0m\n",
       "\u001b[34mSM_OUTPUT_INTERMEDIATE_DIR=/opt/ml/output/intermediate\u001b[0m\n",
       "\u001b[34mSM_CHANNEL_TRAIN=/opt/ml/input/data/train\u001b[0m\n",
@@ -372,13 +372,13 @@
       "\u001b[34mPYTHONPATH=/miniconda3/bin:/:/miniconda3/lib/python3.6/site-packages/xgboost/dmlc-core/tracker:/miniconda3/lib/python36.zip:/miniconda3/lib/python3.6:/miniconda3/lib/python3.6/lib-dynload:/miniconda3/lib/python3.6/site-packages\u001b[0m\n",
       "\u001b[34mInvoking script with the following command:\u001b[0m\n",
       "\u001b[34m/miniconda3/bin/python3 -m xgboost_starter_script --eta 0.2 --max_depth 3 --num_round 100 --objective binary:logistic\u001b[0m\n",
-      "\u001b[34m[0]#011train-auc:0.9421788\u001b[0m\n",
-      "\u001b[34m[1]#011validation-auc:0.7932148\u001b[0m\n",
+      "\u001b[34m[0]#011train-auc:0.9341108\u001b[0m\n",
+      "\u001b[34m[1]#011validation-auc:0.7832938\u001b[0m\n",
       "\n",
-      "2022-10-03 03:39:10 Uploading - Uploading generated training model\n",
-      "2022-10-03 03:39:10 Completed - Training job completed\n",
-      "Training seconds: 127\n",
-      "Billable seconds: 127\n"
+      "2022-10-03 06:37:20 Uploading - Uploading generated training model\n",
+      "2022-10-03 06:37:20 Completed - Training job completed\n",
+      "Training seconds: 143\n",
+      "Billable seconds: 143\n"
      ]
     }
    ],
@@ -449,7 +449,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Create artifact arn:aws:sagemaker:us-east-1:326383828736:artifact/1b61c7ebe4222b31c7f93aa9853fceb0: SUCCESSFUL\n"
+      "Create artifact arn:aws:sagemaker:us-east-1:326383828736:artifact/fca9b9fd4649c6ab8c4ea7c6ddc89361: SUCCESSFUL\n"
      ]
     }
    ],
@@ -540,7 +540,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using existing artifact: arn:aws:sagemaker:us-east-1:326383828736:artifact/8d2adf1704ff1615dc5b07a391f0c205\n"
+      "Using existing artifact: arn:aws:sagemaker:us-east-1:326383828736:artifact/33cf8b55627e96ebb1e97757ceb13228\n"
      ]
     }
    ],
@@ -683,20 +683,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def delete_model_if_exists(sagemaker_session, model_name):\n",
+    "    try:\n",
+    "        model_exists = sagemaker_session.describe_model(model_name)\n",
+    "        while model_exists:\n",
+    "            sagemaker_session.delete_model(model_name)\n",
+    "            time.sleep(5)\n",
+    "            model_exists = sagemaker_session.describe_model(model_name)\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "An error occurred (ValidationException) when calling the DescribeModel operation: Could not find model \"arn:aws:sagemaker:us-east-1:326383828736:model/fraud-detect-demo-xgboost-pre-smote\".\n"
+     ]
+    }
+   ],
+   "source": [
     "model_1_name = f\"{prefix}-xgboost-pre-smote\"\n",
-    "model_matches = sagemaker_boto_client.list_models(NameContains=model_1_name)[\"Models\"]\n",
+    "delete_model_if_exists(sagemaker_session, model_1_name)\n",
     "\n",
-    "if not model_matches:\n",
-    "\n",
-    "    model_1 = sagemaker_session.create_model_from_job(\n",
-    "        name=model_1_name,\n",
-    "        training_job_name=training_job_1_info[\"TrainingJobName\"],\n",
-    "        role=sagemaker_role,\n",
-    "        image_uri=training_job_1_info[\"AlgorithmSpecification\"][\"TrainingImage\"],\n",
-    "    )\n",
-    "else:\n",
-    "\n",
-    "    print(f\"Model {model_1_name} already exists.\")"
+    "model_1 = sagemaker_session.create_model_from_job(\n",
+    "    name=model_1_name,\n",
+    "    training_job_name=training_job_1_info[\"TrainingJobName\"],\n",
+    "    role=sagemaker_role,\n",
+    "    image_uri=training_job_1_info[\"AlgorithmSpecification\"][\"TrainingImage\"],\n",
+    ")"
    ]
   },
   {
@@ -712,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -869,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -888,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -900,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -938,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -965,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -991,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1037,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1073,13 +1094,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[{'ModelPackageGroupName': 'fraud-detect-demo',\n",
+       "  'ModelPackageVersion': 9,\n",
+       "  'ModelPackageArn': 'arn:aws:sagemaker:us-east-1:326383828736:model-package/fraud-detect-demo/9',\n",
+       "  'ModelPackageDescription': 'XGBoost classifier to detect insurance fraud.',\n",
+       "  'CreationTime': datetime.datetime(2022, 10, 3, 6, 37, 44, 609000, tzinfo=tzlocal()),\n",
+       "  'ModelPackageStatus': 'Completed',\n",
+       "  'ModelApprovalStatus': 'PendingManualApproval'},\n",
+       " {'ModelPackageGroupName': 'fraud-detect-demo',\n",
+       "  'ModelPackageVersion': 8,\n",
+       "  'ModelPackageArn': 'arn:aws:sagemaker:us-east-1:326383828736:model-package/fraud-detect-demo/8',\n",
+       "  'ModelPackageDescription': 'XGBoost classifier to detect insurance fraud.',\n",
+       "  'CreationTime': datetime.datetime(2022, 10, 3, 6, 14, 39, 904000, tzinfo=tzlocal()),\n",
+       "  'ModelPackageStatus': 'Completed',\n",
+       "  'ModelApprovalStatus': 'PendingManualApproval'},\n",
+       " {'ModelPackageGroupName': 'fraud-detect-demo',\n",
+       "  'ModelPackageVersion': 7,\n",
+       "  'ModelPackageArn': 'arn:aws:sagemaker:us-east-1:326383828736:model-package/fraud-detect-demo/7',\n",
+       "  'ModelPackageDescription': 'XGBoost classifier to detect insurance fraud with SMOTE.',\n",
+       "  'CreationTime': datetime.datetime(2022, 10, 3, 5, 41, 27, 325000, tzinfo=tzlocal()),\n",
+       "  'ModelPackageStatus': 'Completed',\n",
+       "  'ModelApprovalStatus': 'Approved'},\n",
+       " {'ModelPackageGroupName': 'fraud-detect-demo',\n",
+       "  'ModelPackageVersion': 6,\n",
+       "  'ModelPackageArn': 'arn:aws:sagemaker:us-east-1:326383828736:model-package/fraud-detect-demo/6',\n",
+       "  'ModelPackageDescription': 'XGBoost classifier to detect insurance fraud.',\n",
+       "  'CreationTime': datetime.datetime(2022, 10, 3, 5, 34, 59, 501000, tzinfo=tzlocal()),\n",
+       "  'ModelPackageStatus': 'Completed',\n",
+       "  'ModelApprovalStatus': 'PendingManualApproval'},\n",
+       " {'ModelPackageGroupName': 'fraud-detect-demo',\n",
+       "  'ModelPackageVersion': 5,\n",
+       "  'ModelPackageArn': 'arn:aws:sagemaker:us-east-1:326383828736:model-package/fraud-detect-demo/5',\n",
+       "  'ModelPackageDescription': 'XGBoost classifier to detect insurance fraud with SMOTE.',\n",
+       "  'CreationTime': datetime.datetime(2022, 10, 3, 5, 12, 31, 820000, tzinfo=tzlocal()),\n",
+       "  'ModelPackageStatus': 'Completed',\n",
+       "  'ModelApprovalStatus': 'Approved'},\n",
+       " {'ModelPackageGroupName': 'fraud-detect-demo',\n",
+       "  'ModelPackageVersion': 4,\n",
+       "  'ModelPackageArn': 'arn:aws:sagemaker:us-east-1:326383828736:model-package/fraud-detect-demo/4',\n",
+       "  'ModelPackageDescription': 'XGBoost classifier to detect insurance fraud with SMOTE.',\n",
+       "  'CreationTime': datetime.datetime(2022, 10, 3, 3, 56, 31, 69000, tzinfo=tzlocal()),\n",
+       "  'ModelPackageStatus': 'Completed',\n",
+       "  'ModelApprovalStatus': 'Approved'},\n",
+       " {'ModelPackageGroupName': 'fraud-detect-demo',\n",
+       "  'ModelPackageVersion': 3,\n",
+       "  'ModelPackageArn': 'arn:aws:sagemaker:us-east-1:326383828736:model-package/fraud-detect-demo/3',\n",
+       "  'ModelPackageDescription': 'XGBoost classifier to detect insurance fraud with SMOTE.',\n",
+       "  'CreationTime': datetime.datetime(2022, 10, 3, 3, 44, 36, 293000, tzinfo=tzlocal()),\n",
+       "  'ModelPackageStatus': 'Completed',\n",
+       "  'ModelApprovalStatus': 'Approved'},\n",
+       " {'ModelPackageGroupName': 'fraud-detect-demo',\n",
        "  'ModelPackageVersion': 2,\n",
        "  'ModelPackageArn': 'arn:aws:sagemaker:us-east-1:326383828736:model-package/fraud-detect-demo/2',\n",
        "  'ModelPackageDescription': 'XGBoost classifier to detect insurance fraud.',\n",
@@ -1095,7 +1165,7 @@
        "  'ModelApprovalStatus': 'Approved'}]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
