--- a/end_to_end/fraud_detection/2-lineage-train-assess-bias-tune-registry-e2e.ipynb
+++ b/end_to_end/fraud_detection/2-lineage-train-assess-bias-tune-registry-e2e.ipynb
@@ -256,12 +256,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-10-03 06:32:51 Starting - Starting the training job...ProfilerReport-1664778771: InProgress\n",
-      "...\n",
-      "2022-10-03 06:33:34 Starting - Preparing the instances for training.........\n",
-      "2022-10-03 06:35:15 Downloading - Downloading input data...\n",
-      "2022-10-03 06:35:43 Training - Downloading the training image......\n",
-      "2022-10-03 06:36:43 Training - Training image download completed. Training in progress..\u001b[34mINFO:sagemaker-containers:Imported framework sagemaker_xgboost_container.training\u001b[0m\n",
+      "2022-10-03 14:44:00 Starting - Starting the training job...\n",
+      "2022-10-03 14:44:30 Starting - Preparing the instances for trainingProfilerReport-1664808239: InProgress\n",
+      ".........\n",
+      "2022-10-03 14:45:47 Downloading - Downloading input data......\n",
+      "2022-10-03 14:46:47 Training - Downloading the training image...\n",
+      "2022-10-03 14:47:28 Training - Training image download completed. Training in progress..\u001b[34mINFO:sagemaker-containers:Imported framework sagemaker_xgboost_container.training\u001b[0m\n",
       "\u001b[34mINFO:sagemaker-containers:No GPUs detected (normal if no gpus installed)\u001b[0m\n",
       "\u001b[34mINFO:sagemaker_xgboost_container.training:Invoking user training script.\u001b[0m\n",
       "\u001b[34mINFO:sagemaker-containers:Module xgboost_starter_script does not provide a setup.py. \u001b[0m\n",
@@ -272,10 +272,10 @@
       "\u001b[34m/miniconda3/bin/python3 -m pip install . \u001b[0m\n",
       "\u001b[34mProcessing /opt/ml/code\u001b[0m\n",
       "\u001b[34mBuilding wheels for collected packages: xgboost-starter-script\n",
-      "  Building wheel for xgboost-starter-script (setup.py): started\u001b[0m\n",
-      "\u001b[34m  Building wheel for xgboost-starter-script (setup.py): finished with status 'done'\n",
-      "  Created wheel for xgboost-starter-script: filename=xgboost_starter_script-1.0.0-py2.py3-none-any.whl size=5009 sha256=76b4b80d76b3e33a1c3fa328822abe9a9dfba3529897e3ce50b2824e0e6f272c\n",
-      "  Stored in directory: /home/model-server/tmp/pip-ephem-wheel-cache-q_nw9b46/wheels/95/c1/85/65aaf48b35aba88c6e896d2fd04a4b69f1cee0d81ea32993ca\u001b[0m\n",
+      "  Building wheel for xgboost-starter-script (setup.py): started\n",
+      "  Building wheel for xgboost-starter-script (setup.py): finished with status 'done'\n",
+      "  Created wheel for xgboost-starter-script: filename=xgboost_starter_script-1.0.0-py2.py3-none-any.whl size=5009 sha256=b498574fbdbd15915217e80b8dbb5a58e37db8007cc319e3cd3b3a001ea30f33\n",
+      "  Stored in directory: /home/model-server/tmp/pip-ephem-wheel-cache-ybrliv__/wheels/95/c1/85/65aaf48b35aba88c6e896d2fd04a4b69f1cee0d81ea32993ca\u001b[0m\n",
       "\u001b[34mSuccessfully built xgboost-starter-script\u001b[0m\n",
       "\u001b[34mInstalling collected packages: xgboost-starter-script\u001b[0m\n",
       "\u001b[34mSuccessfully installed xgboost-starter-script-1.0.0\u001b[0m\n",
@@ -308,11 +308,11 @@
       "    },\n",
       "    \"input_dir\": \"/opt/ml/input\",\n",
       "    \"is_master\": true,\n",
-      "    \"job_name\": \"sagemaker-xgboost-2022-10-03-06-32-51-044\",\n",
+      "    \"job_name\": \"sagemaker-xgboost-2022-10-03-14-43-59-848\",\n",
       "    \"log_level\": 20,\n",
       "    \"master_hostname\": \"algo-1\",\n",
       "    \"model_dir\": \"/opt/ml/model\",\n",
-      "    \"module_dir\": \"s3://sagemaker-us-east-1-326383828736/fraud-detect-demo/training_jobs/sagemaker-xgboost-2022-10-03-06-32-51-044/source/sourcedir.tar.gz\",\n",
+      "    \"module_dir\": \"s3://sagemaker-us-east-1-326383828736/fraud-detect-demo/training_jobs/sagemaker-xgboost-2022-10-03-14-43-59-848/source/sourcedir.tar.gz\",\n",
       "    \"module_name\": \"xgboost_starter_script\",\n",
       "    \"network_interface_name\": \"eth0\",\n",
       "    \"num_cpus\": 4,\n",
@@ -360,8 +360,8 @@
       "\u001b[34mSM_NUM_CPUS=4\u001b[0m\n",
       "\u001b[34mSM_NUM_GPUS=0\u001b[0m\n",
       "\u001b[34mSM_MODEL_DIR=/opt/ml/model\u001b[0m\n",
-      "\u001b[34mSM_MODULE_DIR=s3://sagemaker-us-east-1-326383828736/fraud-detect-demo/training_jobs/sagemaker-xgboost-2022-10-03-06-32-51-044/source/sourcedir.tar.gz\u001b[0m\n",
-      "\u001b[34mSM_TRAINING_ENV={\"additional_framework_parameters\":{},\"channel_input_dirs\":{\"train\":\"/opt/ml/input/data/train\"},\"current_host\":\"algo-1\",\"framework_module\":\"sagemaker_xgboost_container.training:main\",\"hosts\":[\"algo-1\"],\"hyperparameters\":{\"eta\":\"0.2\",\"max_depth\":\"3\",\"num_round\":\"100\",\"objective\":\"binary:logistic\"},\"input_config_dir\":\"/opt/ml/input/config\",\"input_data_config\":{\"train\":{\"RecordWrapperType\":\"None\",\"S3DistributionType\":\"FullyReplicated\",\"TrainingInputMode\":\"File\"}},\"input_dir\":\"/opt/ml/input\",\"is_master\":true,\"job_name\":\"sagemaker-xgboost-2022-10-03-06-32-51-044\",\"log_level\":20,\"master_hostname\":\"algo-1\",\"model_dir\":\"/opt/ml/model\",\"module_dir\":\"s3://sagemaker-us-east-1-326383828736/fraud-detect-demo/training_jobs/sagemaker-xgboost-2022-10-03-06-32-51-044/source/sourcedir.tar.gz\",\"module_name\":\"xgboost_starter_script\",\"network_interface_name\":\"eth0\",\"num_cpus\":4,\"num_gpus\":0,\"output_data_dir\":\"/opt/ml/output/data\",\"output_dir\":\"/opt/ml/output\",\"output_intermediate_dir\":\"/opt/ml/output/intermediate\",\"resource_config\":{\"current_group_name\":\"homogeneousCluster\",\"current_host\":\"algo-1\",\"current_instance_type\":\"ml.m4.xlarge\",\"hosts\":[\"algo-1\"],\"instance_groups\":[{\"hosts\":[\"algo-1\"],\"instance_group_name\":\"homogeneousCluster\",\"instance_type\":\"ml.m4.xlarge\"}],\"network_interface_name\":\"eth0\"},\"user_entry_point\":\"xgboost_starter_script.py\"}\u001b[0m\n",
+      "\u001b[34mSM_MODULE_DIR=s3://sagemaker-us-east-1-326383828736/fraud-detect-demo/training_jobs/sagemaker-xgboost-2022-10-03-14-43-59-848/source/sourcedir.tar.gz\u001b[0m\n",
+      "\u001b[34mSM_TRAINING_ENV={\"additional_framework_parameters\":{},\"channel_input_dirs\":{\"train\":\"/opt/ml/input/data/train\"},\"current_host\":\"algo-1\",\"framework_module\":\"sagemaker_xgboost_container.training:main\",\"hosts\":[\"algo-1\"],\"hyperparameters\":{\"eta\":\"0.2\",\"max_depth\":\"3\",\"num_round\":\"100\",\"objective\":\"binary:logistic\"},\"input_config_dir\":\"/opt/ml/input/config\",\"input_data_config\":{\"train\":{\"RecordWrapperType\":\"None\",\"S3DistributionType\":\"FullyReplicated\",\"TrainingInputMode\":\"File\"}},\"input_dir\":\"/opt/ml/input\",\"is_master\":true,\"job_name\":\"sagemaker-xgboost-2022-10-03-14-43-59-848\",\"log_level\":20,\"master_hostname\":\"algo-1\",\"model_dir\":\"/opt/ml/model\",\"module_dir\":\"s3://sagemaker-us-east-1-326383828736/fraud-detect-demo/training_jobs/sagemaker-xgboost-2022-10-03-14-43-59-848/source/sourcedir.tar.gz\",\"module_name\":\"xgboost_starter_script\",\"network_interface_name\":\"eth0\",\"num_cpus\":4,\"num_gpus\":0,\"output_data_dir\":\"/opt/ml/output/data\",\"output_dir\":\"/opt/ml/output\",\"output_intermediate_dir\":\"/opt/ml/output/intermediate\",\"resource_config\":{\"current_group_name\":\"homogeneousCluster\",\"current_host\":\"algo-1\",\"current_instance_type\":\"ml.m4.xlarge\",\"hosts\":[\"algo-1\"],\"instance_groups\":[{\"hosts\":[\"algo-1\"],\"instance_group_name\":\"homogeneousCluster\",\"instance_type\":\"ml.m4.xlarge\"}],\"network_interface_name\":\"eth0\"},\"user_entry_point\":\"xgboost_starter_script.py\"}\u001b[0m\n",
       "\u001b[34mSM_USER_ARGS=[\"--eta\",\"0.2\",\"--max_depth\",\"3\",\"--num_round\",\"100\",\"--objective\",\"binary:logistic\"]\u001b[0m\n",
       "\u001b[34mSM_OUTPUT_INTERMEDIATE_DIR=/opt/ml/output/intermediate\u001b[0m\n",
       "\u001b[34mSM_CHANNEL_TRAIN=/opt/ml/input/data/train\u001b[0m\n",
@@ -372,13 +372,13 @@
       "\u001b[34mPYTHONPATH=/miniconda3/bin:/:/miniconda3/lib/python3.6/site-packages/xgboost/dmlc-core/tracker:/miniconda3/lib/python36.zip:/miniconda3/lib/python3.6:/miniconda3/lib/python3.6/lib-dynload:/miniconda3/lib/python3.6/site-packages\u001b[0m\n",
       "\u001b[34mInvoking script with the following command:\u001b[0m\n",
       "\u001b[34m/miniconda3/bin/python3 -m xgboost_starter_script --eta 0.2 --max_depth 3 --num_round 100 --objective binary:logistic\u001b[0m\n",
-      "\u001b[34m[0]#011train-auc:0.9341108\u001b[0m\n",
-      "\u001b[34m[1]#011validation-auc:0.7832938\u001b[0m\n",
+      "\u001b[34m[0]#011train-auc:0.9039442\u001b[0m\n",
+      "\u001b[34m[1]#011validation-auc:0.768895\u001b[0m\n",
       "\n",
-      "2022-10-03 06:37:20 Uploading - Uploading generated training model\n",
-      "2022-10-03 06:37:20 Completed - Training job completed\n",
-      "Training seconds: 143\n",
-      "Billable seconds: 143\n"
+      "2022-10-03 14:48:27 Uploading - Uploading generated training model\n",
+      "2022-10-03 14:48:27 Completed - Training job completed\n",
+      "Training seconds: 152\n",
+      "Billable seconds: 152\n"
      ]
     }
    ],
@@ -449,7 +449,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Create artifact arn:aws:sagemaker:us-east-1:326383828736:artifact/fca9b9fd4649c6ab8c4ea7c6ddc89361: SUCCESSFUL\n"
+      "Create artifact arn:aws:sagemaker:us-east-1:326383828736:artifact/2e495f9f63e13d63758c2debc9ec4e40: SUCCESSFUL\n"
      ]
     }
    ],
@@ -540,7 +540,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using existing artifact: arn:aws:sagemaker:us-east-1:326383828736:artifact/33cf8b55627e96ebb1e97757ceb13228\n"
+      "Using existing artifact: arn:aws:sagemaker:us-east-1:326383828736:artifact/89ad4e3079a9846b9df3d72d88281285\n"
      ]
     }
    ],
@@ -1101,6 +1101,27 @@
      "data": {
       "text/plain": [
        "[{'ModelPackageGroupName': 'fraud-detect-demo',\n",
+       "  'ModelPackageVersion': 12,\n",
+       "  'ModelPackageArn': 'arn:aws:sagemaker:us-east-1:326383828736:model-package/fraud-detect-demo/12',\n",
+       "  'ModelPackageDescription': 'XGBoost classifier to detect insurance fraud.',\n",
+       "  'CreationTime': datetime.datetime(2022, 10, 3, 14, 48, 54, 505000, tzinfo=tzlocal()),\n",
+       "  'ModelPackageStatus': 'Completed',\n",
+       "  'ModelApprovalStatus': 'PendingManualApproval'},\n",
+       " {'ModelPackageGroupName': 'fraud-detect-demo',\n",
+       "  'ModelPackageVersion': 11,\n",
+       "  'ModelPackageArn': 'arn:aws:sagemaker:us-east-1:326383828736:model-package/fraud-detect-demo/11',\n",
+       "  'ModelPackageDescription': 'XGBoost classifier to detect insurance fraud with SMOTE.',\n",
+       "  'CreationTime': datetime.datetime(2022, 10, 3, 6, 40, 54, 66000, tzinfo=tzlocal()),\n",
+       "  'ModelPackageStatus': 'Completed',\n",
+       "  'ModelApprovalStatus': 'Approved'},\n",
+       " {'ModelPackageGroupName': 'fraud-detect-demo',\n",
+       "  'ModelPackageVersion': 10,\n",
+       "  'ModelPackageArn': 'arn:aws:sagemaker:us-east-1:326383828736:model-package/fraud-detect-demo/10',\n",
+       "  'ModelPackageDescription': 'XGBoost classifier to detect insurance fraud with SMOTE.',\n",
+       "  'CreationTime': datetime.datetime(2022, 10, 3, 6, 40, 31, 976000, tzinfo=tzlocal()),\n",
+       "  'ModelPackageStatus': 'Completed',\n",
+       "  'ModelApprovalStatus': 'Approved'},\n",
+       " {'ModelPackageGroupName': 'fraud-detect-demo',\n",
        "  'ModelPackageVersion': 9,\n",
        "  'ModelPackageArn': 'arn:aws:sagemaker:us-east-1:326383828736:model-package/fraud-detect-demo/9',\n",
        "  'ModelPackageDescription': 'XGBoost classifier to detect insurance fraud.',\n",
